--- a/index.html
+++ b/index.html
@@ -80,8 +80,24 @@
 
           <div class="version">
             <div class="version-header">
+              <span class="version-tag">v2.3.7</span>
+              <span class="version-date">Latest</span>
+            </div>
+            <div class="version-body">
+              <ul>
+                <li>Much more stable until now</li>
+                <li>Added "/leaderboard" command</li>
+                <li>Now you can pvp with other players (in Forsaken)</li>
+                <li>Added "/1v1" command</li>
+                <li>Integrated to Railway for now</li>
+              </ul>
+            </div>
+          </div>
+          
+          <div class="version">
+            <div class="version-header">
               <span class="version-tag">v2.3.5</span>
-              <span class="version-date">latest</span>
+              <span class="version-date">01-20-2026</span>
             </div>
             <div class="version-body">
               <ul>
