--- a/index.html
+++ b/index.html
@@ -78,10 +78,29 @@
 
         <div class="changelog">
 
+       <div class="version">
+            <div class="version-header">
+              <span class="version-tag">v2.3.7a</span>
+              <span class="version-date">Latest</span>
+            </div>
+            <div class="version-body">
+              <ul>
+                <li>Added "/profile" commands</li>
+                <li>Added "/party" commands</li>
+                <li>Added "/stats" commands</li>
+                <li>Added "/1v5" tournament pvp</li>
+                <li>Added "/4v4" pvp</li>
+                <li>Added "/3v3" pvp</li>
+                <li>Added "/2v2" pvp</li>
+              </ul>
+            </div>
+
+          </div>
+
           <div class="version">
             <div class="version-header">
               <span class="version-tag">v2.3.7</span>
-              <span class="version-date">Latest</span>
+              <span class="version-date">01-25-2026</span>
             </div>
             <div class="version-body">
               <ul>
