--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="card-inner">
         <div class="avatar-container">
           <img src="aagetha.png" alt="Agetha" class="avatar">
-          <div class="status-badge">Online</div>
+          <div class="status-badge">24/7</div>
         </div>
         
         <h2 class="profile-name">Agetha</h2>
